--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --aot --buildOptimizer --optimization --prod --outputHashing=none --vendorChunk=false --output-path=deployment",
+    "build-deploy": "npm run build && node build-script.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -38,6 +39,8 @@
     "@types/node": "8.9.4",
     "@webcomponents/webcomponentsjs": "2.2.4",
     "codelyzer": "4.5.0",
+    "concat": "1.0.3",
+    "fs-extra": "7.0.1",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "3.0.0",
