--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "7.2.1",
     "@angular/platform-browser-dynamic": "7.2.1",
     "@angular/router": "7.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "bootstrap": "4.2.1",
     "core-js": "2.5.4",
     "document-register-element": "1.7.2",
